@@ -31,6 +31,8 @@ public class Room implements Entity {
      * Amount of Person objects allowed in the room at a certain time.
      */
     int capacity;
+
+    int cleanliness = 10;
     /**
      * Is there gas in the room.
      */
@@ -48,10 +50,6 @@ public class Room implements Entity {
     }
     /**
      * Constructor.
-     *
-     * @param id
-     * @param capacity
-     * @param cursed
      */
     public Room(int id, int capacity, boolean cursed) {
         this.id = id;
@@ -61,8 +59,6 @@ public class Room implements Entity {
 
     /**
      * Adds the Door received as a parameter to the room.
-     *
-     * @param door
      */
     public void addDoor(Door door) {
         Logger.logCall("addDoor", new Object[]{door}, "void");
@@ -72,8 +68,6 @@ public class Room implements Entity {
 
     /**
      * Adds the Item received as a parameter to the room.
-     *
-     * @param item
      */
     public void addItem(Item item) {
         Logger.logCall("addItem", new Object[]{item}, "void");
@@ -83,18 +77,24 @@ public class Room implements Entity {
 
     /**
      * Adds the Person received as a parameter to the room.
-     *
-     * @param person
      */
-    public void addPerson(Person person) {
-        Logger.logCall("addPerson", new Object[]{person}, "void");
-        people.add(person);
-        Logger.logReturn();
+    public boolean addPerson(Person person) {
+        Logger.logCall("addPerson", new Object[]{person}, "boolean");
+        if(capacity == people.size()){
+            Logger.logReturn(false);
+            return false;
+        } else{
+            people.add(person);
+            cleanliness--;
+            Logger.logReturn(true);
+            return true;
+        }
     }
 
 
     /**
      * Function indicating the termination of the room.
+     * Practically no use
      */
     public void destroy() {
         Logger.logCall("destroy", "void");
@@ -141,6 +141,12 @@ public class Room implements Entity {
         Logger.logReturn();
     }
 
+    public void unGas(){
+        Logger.logCall("unGas", "void");
+        gassed = false;
+        Logger.logReturn();
+    }
+
 
     /**
      * The room merges with a random neighbouring room.
@@ -149,10 +155,10 @@ public class Room implements Entity {
     public void merge() {
         Logger.logCall("merge", "void");
         if(!doors.isEmpty()){
-            Room neighbour = doors.get(0).getDest();
+            Room neighbour = doors.getFirst().getDest();
             this.capacity = Math.max(this.capacity, neighbour.capacity);
             List<Person> neighbourPeople = neighbour.getPeople();
-            if ((!Logger.testerInput("Can the rooms merge?")) || this.capacity < (people.size() + neighbourPeople.size())) {
+            if (this.capacity < (people.size() + neighbourPeople.size())) {
                 return;
             }
             List<Item> neighbourItems = neighbour.getItems();
@@ -171,8 +177,6 @@ public class Room implements Entity {
 
     /**
      * Removes the door received as a parameter from the room.
-     *
-     * @param door
      */
     public void removeDoor(Door door) {
         Logger.logCall("removeDoor", new Object[]{door}, "void");
@@ -182,8 +186,6 @@ public class Room implements Entity {
 
     /**
      * Removes the item received as a parameter from the room.
-     *
-     * @param item
      */
     public void removeItem(Item item) {
         Logger.logCall("removeItem", new Object[]{item}, "void");
@@ -193,8 +195,6 @@ public class Room implements Entity {
 
     /**
      * Removes the person received as a parameter from the room.
-     *
-     * @param person
      */
     public void removePerson(Person person) {
         Logger.logCall("removePerson", new Object[]{person}, "void");
@@ -236,18 +236,10 @@ public class Room implements Entity {
     }
 
     /**
-     * Checks if the room is full
-     *
-     * @return people.size() >= capacity
-     */
-    public boolean isFull() {
-        Logger.logCall("isFull", "boolean");
-        Logger.logReturn(people.size() >= capacity);
-        return people.size() >= capacity;
-    }
-
-    /**
      * With a tick passing the Room gasses all the people in it.
+     * If the room is cursed it ticks its doors where the door decides if it disappears
+     * or not based on chance.
+     * What happens if there are two-way doors ?!
      */
     public void tick() {
         Logger.logCall("tick", "void");
@@ -255,6 +247,30 @@ public class Room implements Entity {
             for (Person p : people)
                 p.gasStun();
         }
+        if(cursed){
+            for(Door d : doors) {
+                d.tick();
+            }
+        }
         Logger.logReturn();
     }
+
+    public void evacuate(){
+        for(Person p : people){
+            int value = 0;
+            boolean moved = false;
+            while(!moved){
+                    moved = p.move(doors.get(value));
+                if(value == doors.size()-1){
+                    moved = true;
+                }
+                value++;
+            }
+        }
+    }
+
+    public void clean(){
+        cleanliness = 10;
+    }
+
 }
